# cacao-zcap-rs

./: Cargo.toml  README.md  index.html
.github/workflows/: ci.yml
context/: v1.json
examples/: regenerate-test-vectors.rs
src/: core.rs  lib.rs  proof.rs
src/translation/: cacao2zcap.rs  mod.rs  zcap2cacao.rs
tests/: delegation0-zcap.jsonld  delegation0.siwe  delegation1-zcap.jsonld  delegation1.siwe
